--- a/maths_stats_challenges.ipynb
+++ b/maths_stats_challenges.ipynb
@@ -43,6 +43,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2:\n",
+    "\n",
+    "- Given a positive integer num, write a function which returns True if num is a perfect square else False.\n",
+    "\n",
+    "-  *Follow up*: Do not use any built-in library function such as sqrt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_perfect_square(num):\n",
+    "    for i in range(1, num):\n",
+    "        if (i*i == num):\n",
+    "            return True\n",
+    "        if i * i > num:\n",
+    "            return False\n",
+    "        \n",
+    "is_perfect_square(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_perfect_square(24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_perfect_square(144)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
